syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ClientRequest {
    int32 firstNumber = 1;
    int32 lastNumber = 2;
}

message ServerResponse {
    int32 nextNumbers = 1;
}

service RemoteDBService {
    rpc getNextNumbers(ClientRequest) returns (stream ServerResponse);
}
